--- a/index.html
+++ b/index.html
@@ -25,43 +25,12 @@
             font-size: var(--font-size);
         }
     </style>
-    <style>
-
-        .g-button {
-            font-size: var(--font-size);
-            height: var(--button-height);
-            padding: 0 1em;
-            border-radius: var(--border-radius);
-            border: 1px solid var(--border-color);
-            background: var(--button-bg);
-        }
-        .g-button:hover {
-            border-color: var(--border-color-hover);
-            cursor: pointer;
-        }
-        .g-button:active {
-            background-color: var(--button-active-bg);
-        }
-        .g-button:focus {
-            outline: none;
-        }
-
-    </style>
 </head>
 <body>
 <div id="app">
     <g-button></g-button>
-        {{message}}
 </div>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.17/vue.min.js"></script>
-<script src="./button.js"></script>
-<script>
-    new Vue({
-        el:'#app',
-        data:{
-            message:'liuwen'
-        }
-    })
-</script>
+
+<script src="./src/app.js"></script>
 </body>
 </html>
