--- a/index.html
+++ b/index.html
@@ -32,22 +32,18 @@
             font-size: var(--font-size);
         }
     </style>
-    <style>
-        .icon {
-            width: 1em;
-            height: 1em;
-        }
-    </style>
+
 </head>
 <body>
 <div id="app">
     <g-button >按钮</g-button>
     <g-button icon="shezhi1" icon-position="left">按钮</g-button>
     <g-button icon="shezhi1" icon-position="right">按钮</g-button>
+    <g-icon name="upload"></g-icon>
 </div>
 
 
-<script src="//at.alicdn.com/t/font_860042_6ov6fcwl72w.js"></script>
+<script src="//at.alicdn.com/t/font_860042_xwtp9v5616.js"></script>
 <script src="./src/app.js"></script>
 </body>
 </html>
