增加组件外部增加click事件，组件内部emit触发事件

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
 </head>
 <body>
 <div id="app">
-    <g-button >按钮</g-button>
-    <g-button icon="shezhi1" icon-position="left">按钮</g-button>
-    <g-button icon="shezhi1" icon-position="right">按钮</g-button>
+    <g-button :loading="loading1" @click="loading1=!loading1">按钮</g-button>
+    <g-button icon="shezhi1" icon-position="left" :loading="loading2" @click="loading2=!loading2">按钮</g-button>
+    <g-button icon="shezhi1" icon-position="right" :loading="loading3" @click="loading3=!loading3">按钮</g-button>
     <g-icon name="upload"></g-icon>
 </div>
 
