完成input测试驱动，并且让input可以双向绑定

--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
         <g-input value="123" disabled></g-input>
         <g-input value="123" readonly></g-input>
         <g-input value="123"></g-input>
+        <g-input value="123" @change="InputChange" @input="bindContent"></g-input>
+        {{msg}}
     </div>
     <div class="box">
         <g-input value="123" error="姓名不能少于两个字"></g-input>
