--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
         .box{
             margin:30px;
         }
+        .col{
+            height:100px;
+            border:1px solid red;
+        }
     </style>
 
 </head>
@@ -41,6 +45,7 @@
 <div id="app">
 
     <div class="box">
+        <!--参数 :loading icon icon-position-->
         <g-button :loading="loading1" @click="loading1=!loading1">按钮</g-button>
         <g-button icon="shezhi1" icon-position="left" :loading="loading2" @click="loading2=!loading2">按钮</g-button>
         <g-button icon="shezhi1" icon-position="right" :loading="loading3" @click="loading3=!loading3">按钮</g-button>
@@ -58,6 +63,7 @@
 
 
     <div class="box">
+        <!--//g-input接收参数 value disabled readonly error 各类事件：@change @input @focus @blur-->
         <g-input value="123" disabled></g-input>
         <g-input value="123" readonly></g-input>
         <g-input value="123"></g-input>
@@ -66,6 +72,18 @@
     </div>
     <div class="box">
         <g-input value="123" error="姓名不能少于两个字"></g-input>
+    </div>
+
+
+    <div class="box">
+        <!--//g-row接收参数 gutter align-->
+        <!--//g-col接收参数 span  offset-->
+        <g-row gutter="0">
+            <g-col class="col" span="8" ></g-col>
+            <g-col class="col" span="2" offset="1"></g-col>
+            <g-col class="col" span="2" offset="1"></g-col>
+            <g-col class="col" span="9" offset="1" ></g-col>
+        </g-row>
     </div>
 </div>
 
