添加row 和 col 的测试用例，并通过测试

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
     <div class="box">
         <!--//g-row接收参数 gutter align-->
-        <!--//g-col接收参数 span  offset-->
+        <!--//g-col接收参数 span  offset  :ipad  :narrow-pc :pc  :wide-pc-->
         <g-row gutter="0">
             <g-col class="col" span="8" ></g-col>
             <g-col class="col" span="2" offset="1"></g-col>
