toast初步实现，使用了plugin

--- a/index.html
+++ b/index.html
@@ -85,6 +85,11 @@
             <g-col class="col" span="9" offset="1" ></g-col>
         </g-row>
     </div>
+
+
+    <div class="box">
+        <button @click="showToast">Toast按钮</button>
+    </div>
 </div>
 
 
