--- a/index.html
+++ b/index.html
@@ -44,8 +44,9 @@
 <body>
 <div id="app">
 
+<!--
     <div class="box">
-        <!--参数 :loading icon icon-position-->
+        &lt;!&ndash;参数 :loading icon icon-position&ndash;&gt;
         <g-button :loading="loading1" @click="loading1=!loading1">按钮</g-button>
         <g-button icon="shezhi1" icon-position="left" :loading="loading2" @click="loading2=!loading2">按钮</g-button>
         <g-button icon="shezhi1" icon-position="right" :loading="loading3" @click="loading3=!loading3">按钮</g-button>
@@ -63,7 +64,7 @@
 
 
     <div class="box">
-        <!--//g-input接收参数 value disabled readonly error 各类事件：@change @input @focus @blur-->
+        &lt;!&ndash;//g-input接收参数 value disabled readonly error 各类事件：@change @input @focus @blur&ndash;&gt;
         <g-input value="123" disabled></g-input>
         <g-input value="123" readonly></g-input>
         <g-input value="123"></g-input>
@@ -76,8 +77,8 @@
 
 
     <div class="box">
-        <!--//g-row接收参数 gutter align-->
-        <!--//g-col接收参数 span  offset  :ipad  :narrow-pc :pc  :wide-pc-->
+        &lt;!&ndash;//g-row接收参数 gutter align&ndash;&gt;
+        &lt;!&ndash;//g-col接收参数 span  offset  :ipad  :narrow-pc :pc  :wide-pc&ndash;&gt;
         <g-row gutter="0">
             <g-col class="col" span="8" ></g-col>
             <g-col class="col" span="2" offset="1"></g-col>
@@ -85,6 +86,7 @@
             <g-col class="col" span="9" offset="1" ></g-col>
         </g-row>
     </div>
+-->
 
 
     <div class="box">
