--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 <div id="app">
 
 
-    <div class="box">
-        <!--参数 :loading icon icon-position-->
+  <!--  <div class="box">
+        &lt;!&ndash;参数 :loading icon icon-position&ndash;&gt;
         <g-button :loading="loading1" @click="loading1=!loading1">按钮</g-button>
         <g-button icon="shezhi1" icon-position="left" :loading="loading2" @click="loading2=!loading2">按钮</g-button>
         <g-button icon="shezhi1" icon-position="right" :loading="loading3" @click="loading3=!loading3">按钮</g-button>
@@ -71,7 +71,7 @@
 
 
     <div class="box">
-       <!--g-input接收参数 value disabled readonly error 各类事件：@change @input @focus @blur-->
+       &lt;!&ndash;g-input接收参数 value disabled readonly error 各类事件：@change @input @focus @blur&ndash;&gt;
         <g-input value="123" disabled></g-input>
         <g-input value="123" readonly></g-input>
         <g-input value="123"></g-input>
@@ -84,8 +84,8 @@
 
 
     <div class="box">
-        <!--g-row接收参数 gutter align-->
-        <!--g-col接收参数 span  offset  :ipad  :narrow-pc :pc  :wide-pc-->
+        &lt;!&ndash;g-row接收参数 gutter align&ndash;&gt;
+        &lt;!&ndash;g-col接收参数 span  offset  :ipad  :narrow-pc :pc  :wide-pc&ndash;&gt;
         <g-row gutter="0">
             <g-col class="col" span="8" ></g-col>
             <g-col class="col" span="2" offset="1"></g-col>
@@ -99,7 +99,33 @@
         <button class="toast" @click="showToast2">Toast-middle</button>
         <button class="toast" @click="showToast3">Toast-bottom</button>
     </div>
+-->
+
+    <div class="box">
+       <!-- <g-tabs :selected="selectedTab" @update:selected="selectedTab= $event">-->
+        <g-tabs :selected.sync="selectedTab" @update:selected="yyy($event)">
+            <g-tabs-head>
+                <template slot="actions">
+                    <button>按钮</button>
+                </template>
+                <g-tabs-item name="women">
+                    <g-icon name="loading"></g-icon>
+                    美女
+                </g-tabs-item>
+                <g-tabs-item name="finance" disabled >财经</g-tabs-item>
+                <g-tabs-item name="sports">体育</g-tabs-item>
+
+            </g-tabs-head>
+            <g-tabs-body>
+                <g-tabs-pane name="women">美女xxxxx</g-tabs-pane>
+                <g-tabs-pane name="finance">财经xxxxx</g-tabs-pane>
+                <g-tabs-pane name="sports">体育xxxxx</g-tabs-pane>
+            </g-tabs-body>
+        </g-tabs>
+    </div>
+
 </div>
+
 
 
 <script src="//at.alicdn.com/t/font_860042_b2l86rcb93w.js"></script>
