tab可以切换，同时具备初始状态

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
     <div class="box">
        <!-- <g-tabs :selected="selectedTab" @update:selected="selectedTab= $event">-->
-        <g-tabs :selected.sync="selectedTab" @update:selected="yyy($event)">
+        <g-tabs :selected.sync="selectedTab">
             <g-tabs-head>
                 <template slot="actions">
                     <button>按钮</button>
