tab 切换动画完成

--- a/index.html
+++ b/index.html
@@ -108,10 +108,7 @@
                 <template slot="actions">
                     <button>按钮</button>
                 </template>
-                <g-tabs-item name="women">
-                    <g-icon name="loading"></g-icon>
-                    美女
-                </g-tabs-item>
+                <g-tabs-item name="women">美女</g-tabs-item>
                 <g-tabs-item name="finance" disabled >财经</g-tabs-item>
                 <g-tabs-item name="sports">体育</g-tabs-item>
 
