tab 切换动画完成 改bug

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             --border-color-hover: #666;
         }
         #app {
-            margin: 20px;
+
         }
 
         body {
@@ -32,7 +32,7 @@
     </style>
     <style>
         .box{
-            margin:30px;
+            margin:30px 0;
         }
         .col{
             height:100px;
