--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     <!--</div>-->
 
     <div class="box">
-        <g-collapse>
+        <g-collapse single>
             <g-collapse-item title="标题1">内容1</g-collapse-item>
             <g-collapse-item title="标题2">内容2</g-collapse-item>
             <g-collapse-item title="标题3">内容3</g-collapse-item>
