--- a/index.html
+++ b/index.html
@@ -122,10 +122,10 @@
     <!--</div>-->
 
     <div class="box">
-        <g-collapse single>
-            <g-collapse-item title="标题1">内容1</g-collapse-item>
-            <g-collapse-item title="标题2">内容2</g-collapse-item>
-            <g-collapse-item title="标题3">内容3</g-collapse-item>
+        <g-collapse :selected.sync="selectedTab" single>
+            <g-collapse-item title="海贼王" name="1">《ONE PIECE》是日本漫画家尾田荣一郎创作的一部著名的少年漫画作品，至今仍连载中，该作品内容为描述一名少年蒙奇·D·路飞想要得到“ONE PIECE”和成为“海贼王”的故事。</g-collapse-item>
+            <g-collapse-item title="火影忍者"  name="2"> 《火影忍者》，通常简称为“火影”，为日本漫画家岸本齐史创作的少年漫画，讲述忍者世界里围绕着身为对手的漩涡鸣人和宇智波佐助两人，与其他角色的经历。</g-collapse-item>
+            <g-collapse-item title="七龙珠"  name="3">《七龙珠》（日语：ドラゴンボール，英语：DRAGON BALL）是日本漫画家鸟山明的格鬥冒險漫画，該作品於1984年到1995年间在集英社《週刊少年Jump》週刊上连载。</g-collapse-item>
         </g-collapse>
     </div>
 
