--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>余咖咖的UI框架</title>
     <style>
         * {
-            margin: 0px;
+
             padding: 0px;
             box-sizing: border-box;
         }
@@ -22,12 +22,11 @@
         .box{
             margin:20px;
         }
-.xxx{
+.xxx {
 
-    position:relative;
-    width:500px;
-    left:50px;
-
+    position: relative;
+    width: 500px;
+    left: 50px;
 }
         .col{
             height:100px;
@@ -37,6 +36,7 @@
             text-align: center;
             line-height:100px;
             font-size:20px;
+
 
         }
         .toast{
@@ -78,31 +78,55 @@
         <y-input value="12311" error="请重新输入手机号码"></y-input>
     </div>-->
 
-    <!--<div class="box">-->
+    <div class="box">
+        <y-row>
+            <y-col class="col" span="11" >11</y-col>
+            <y-col class="col" span="11" offset="2">11</y-col>
+        </y-row>
+    </div>
+    <div class="box">
+        <y-row>
+            <y-col class="col" span="7" >7</y-col>
+            <y-col class="col" span="7" offset="1">7</y-col>
+            <y-col class="col" span="7" offset="2">7</y-col>
+        </y-row>
+    </div>
+
+    <div class="box">
+        <y-row>
+            <y-col class="col" span="8" >8</y-col>
+            <y-col class="col" span="3" offset="2">3</y-col>
+            <y-col class="col" span="3" offset="2">3</y-col>
+            <y-col class="col" span="4" offset="2">3</y-col>
+        </y-row>
+    </div>
+
+   <!--<div class="box">-->
         <!--<y-row>-->
-            <!--<y-col class="col" span="8">8</y-col>-->
+            <!--<y-col class="col" span="8" >8</y-col>-->
             <!--<y-col class="col" span="8">8</y-col>-->
             <!--<y-col class="col" span="8">8</y-col>-->
         <!--</y-row>-->
     <!--</div>-->
 
-       <!--<div class="box">-->
-            <!--<y-row gutter="50">-->
-                <!--<y-col class="col" span="8">8</y-col>-->
-                <!--<y-col class="col" span="8">8</y-col>-->
-                <!--<y-col class="col" span="8">8</y-col>-->
-            <!--</y-row>-->
-        <!--</div>-->
-<div class="box">
-    <y-layout   class="layout">
-        <y-sider class="sider">sider</y-sider>
-        <y-layout>
-            <y-header class="header">header</y-header>
-            <y-content class="content">content</y-content>
-            <y-footer class="footer">footer</y-footer>
-        </y-layout>
-    </y-layout>
-</div>
+    <!--<div class="box">-->
+        <!--<y-row>-->
+            <!--<y-col class="col" span="6">6</y-col>-->
+            <!--<y-col class="col" span="6">6</y-col>-->
+            <!--<y-col class="col" span="6">6</y-col>-->
+            <!--<y-col class="col" span="6">6</y-col>-->
+        <!--</y-row>-->
+    <!--</div>-->
+<!--<div class="box">-->
+    <!--<y-layout   class="layout">-->
+        <!--<y-sider class="sider">sider</y-sider>-->
+        <!--<y-layout>-->
+            <!--<y-header class="header">header</y-header>-->
+            <!--<y-content class="content">content</y-content>-->
+            <!--<y-footer class="footer">footer</y-footer>-->
+        <!--</y-layout>-->
+    <!--</y-layout>-->
+<!--</div>-->
 <!--
     <div class="box">
         <button class="toast"  @click="showToast1">Toast-top</button>
