--- a/index.html
+++ b/index.html
@@ -28,46 +28,46 @@
     width: 500px;
     left: 50px;
 }
-        .col{
-            height:100px;
-            background:#40a9ff;
-            color:white;
-            border:1px solid #1890ff;
-            text-align: center;
-            line-height:100px;
-            font-size:20px;
+        /*.col{*/
+            /*height:100px;*/
+            /*background:#40a9ff;*/
+            /*color:white;*/
+            /*border:1px solid #1890ff;*/
+            /*text-align: center;*/
+            /*line-height:100px;*/
+            /*font-size:20px;*/
 
 
-        }
-        .toast{
-            border:1px solid #666;
-            background:white;
-            padding:5px;
-            border-radius:3px;
-            cursor:pointer;
-        }
-        .layout{color: white;}
-        .header{height: 40px; background:#40a9ff;text-align: center;line-height: 40px;}
-        .content{height: 80px; background:#096dd9;text-align: center;line-height: 80px;}
-        .footer{height: 40px; background:#40a9ff;text-align: center;line-height: 40px;}
-        .sider{height: 160px; background:#1890ff;text-align: center;line-height: 160px;width:30%;}
+        /*}*/
+        /*.toast{*/
+            /*border:1px solid #666;*/
+            /*background:white;*/
+            /*padding:5px;*/
+            /*border-radius:3px;*/
+            /*cursor:pointer;*/
+        /*}*/
+        /*.layout{color: white;}*/
+        /*.header{height: 40px; background:#40a9ff;text-align: center;line-height: 40px;}*/
+        /*.content{height: 80px; background:#096dd9;text-align: center;line-height: 80px;}*/
+        /*.footer{height: 40px; background:#40a9ff;text-align: center;line-height: 40px;}*/
+        /*.sider{height: 160px; background:#1890ff;text-align: center;line-height: 160px;width:30%;}*/
     </style>
 
 </head>
 <body>
 <div id="app">
 
-    <!--<div class="box">-->
-        <!--&lt;!&ndash;参数 :loading icon icon-position&ndash;&gt;-->
-        <!--<y-button>按钮</y-button>-->
-        <!--<y-button icon="shezhi1" icon-position="right">按钮</y-button>-->
-        <!--<y-button loading>按钮</y-button>-->
-        <!--<y-button disabled>按钮</y-button>-->
-        <!--<y-button-group>-->
-            <!--<y-button icon="left">上一页</y-button>-->
-            <!--<y-button icon="right" icon-position="right">下一页</y-button>-->
-        <!--</y-button-group>-->
-    <!--</div>-->
+    <div class="box">
+        <!--参数 :loading icon icon-position-->
+        <y-button>按钮</y-button>
+        <y-button icon="shezhi1" icon-position="right">按钮</y-button>
+        <y-button loading>按钮</y-button>
+        <y-button disabled>按钮</y-button>
+        <y-button-group>
+            <y-button icon="left">上一页</y-button>
+            <y-button icon="right" icon-position="right">下一页</y-button>
+        </y-button-group>
+    </div>
 
 <!--    <div class="box">
         <y-input value="这是输入框" @change="aaa" @input="bbb" @focus="ccc" @blur="ddd"></y-input>
@@ -78,28 +78,28 @@
         <y-input value="12311" error="请重新输入手机号码"></y-input>
     </div>-->
 
-    <div class="box">
-        <y-row>
-            <y-col class="col" span="11" >11</y-col>
-            <y-col class="col" span="11" offset="2">11</y-col>
-        </y-row>
-    </div>
-    <div class="box">
-        <y-row>
-            <y-col class="col" span="7" >7</y-col>
-            <y-col class="col" span="7" offset="1">7</y-col>
-            <y-col class="col" span="7" offset="2">7</y-col>
-        </y-row>
-    </div>
+    <!--<div class="box">-->
+        <!--<y-row>-->
+            <!--<y-col class="col" span="11" >11</y-col>-->
+            <!--<y-col class="col" span="11" offset="2">11</y-col>-->
+        <!--</y-row>-->
+    <!--</div>-->
+    <!--<div class="box">-->
+        <!--<y-row>-->
+            <!--<y-col class="col" span="7" >7</y-col>-->
+            <!--<y-col class="col" span="7" offset="1">7</y-col>-->
+            <!--<y-col class="col" span="7" offset="2">7</y-col>-->
+        <!--</y-row>-->
+    <!--</div>-->
 
-    <div class="box">
-        <y-row>
-            <y-col class="col" span="8" >8</y-col>
-            <y-col class="col" span="3" offset="2">3</y-col>
-            <y-col class="col" span="3" offset="2">3</y-col>
-            <y-col class="col" span="4" offset="2">3</y-col>
-        </y-row>
-    </div>
+    <!--<div class="box">-->
+        <!--<y-row>-->
+            <!--<y-col class="col" span="8" >8</y-col>-->
+            <!--<y-col class="col" span="3" offset="2">3</y-col>-->
+            <!--<y-col class="col" span="3" offset="2">3</y-col>-->
+            <!--<y-col class="col" span="4" offset="2">3</y-col>-->
+        <!--</y-row>-->
+    <!--</div>-->
 
    <!--<div class="box">-->
         <!--<y-row>-->
