--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 
 
 
-<script src="//at.alicdn.com/t/font_860042_fabgsfluazl.js"></script>
+<!--<script src="//at.alicdn.com/t/font_860042_fabgsfluazl.js"></script>-->
 <script src="./src/app.js"></script>
 </body>
 </html>
