解决svg引入，解决toast 及相关测试

--- a/index.html
+++ b/index.html
@@ -36,8 +36,6 @@
             /*text-align: center;*/
             /*line-height:100px;*/
             /*font-size:20px;*/
-
-
         /*}*/
         /*.toast{*/
             /*border:1px solid #666;*/
@@ -57,26 +55,26 @@
 <body>
 <div id="app">
 
-    <div class="box">
-        <!--参数 :loading icon icon-position-->
-        <y-button>按钮</y-button>
-        <y-button icon="shezhi1" icon-position="right">按钮</y-button>
-        <y-button loading>按钮</y-button>
-        <y-button disabled>按钮</y-button>
-        <y-button-group>
-            <y-button icon="left">上一页</y-button>
-            <y-button icon="right" icon-position="right">下一页</y-button>
-        </y-button-group>
-    </div>
+    <!--<div class="box">-->
+        <!--&lt;!&ndash;参数 :loading icon icon-position&ndash;&gt;-->
+        <!--<y-button>按钮</y-button>-->
+        <!--<y-button icon="shezhi1" icon-position="right">按钮</y-button>-->
+        <!--<y-button loading>按钮</y-button>-->
+        <!--<y-button disabled>按钮</y-button>-->
+        <!--<y-button-group>-->
+            <!--<y-button icon="left">上一页</y-button>-->
+            <!--<y-button icon="right" icon-position="right">下一页</y-button>-->
+        <!--</y-button-group>-->
+    <!--</div>-->
 
-<!--    <div class="box">
-        <y-input value="这是输入框" @change="aaa" @input="bbb" @focus="ccc" @blur="ddd"></y-input>
-        <y-input value="这是输入框" disabled></y-input>
-        <y-input value="这是输入框" readonly></y-input>
-    </div>
-    <div class="box">
-        <y-input value="12311" error="请重新输入手机号码"></y-input>
-    </div>-->
+    <!--<div class="box">-->
+        <!--<y-input value="这是输入框" @change="aaa" @input="bbb" @focus="ccc" @blur="ddd"></y-input>-->
+        <!--<y-input value="这是输入框" disabled></y-input>-->
+        <!--<y-input value="这是输入框" readonly></y-input>-->
+    <!--</div>-->
+    <!--<div class="box">-->
+        <!--<y-input value="12311" error="请重新输入手机号码"></y-input>-->
+    <!--</div>-->
 
     <!--<div class="box">-->
         <!--<y-row>-->
@@ -118,7 +116,7 @@
         <!--</y-row>-->
     <!--</div>-->
 <!--<div class="box">-->
-    <!--<y-layout   class="layout">-->
+    <!--<y-layout  class="layout">-->
         <!--<y-sider class="sider">sider</y-sider>-->
         <!--<y-layout>-->
             <!--<y-header class="header">header</y-header>-->
@@ -127,13 +125,11 @@
         <!--</y-layout>-->
     <!--</y-layout>-->
 <!--</div>-->
-<!--
     <div class="box">
         <button class="toast"  @click="showToast1">Toast-top</button>
         <button class="toast" @click="showToast2">Toast-middle</button>
         <button class="toast" @click="showToast3">Toast-bottom</button>
     </div>
--->
 
 <!--    <div class="box">
         &lt;!&ndash;<y-tabs :selected="selectedTab" @update:selected="selectedTab= $event">&ndash;&gt;
