--- a/index.html
+++ b/index.html
@@ -52,6 +52,12 @@
 <body>
 <div id="app">
 
+    <div class="box">
+        <y-cascader :source="source" >
+
+        </y-cascader>
+
+    </div>
 
     <!--<div class="box">-->
         <!--<y-popover>-->
